# nascraft

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  init.sql  init_sys.sql  start.sh
.sqlx/: query-164efdd8cd4ef7aa65fa8905334861c1c7a1100579c06c80a6bef7f1bf7402b1.json  query-1d3eed9e5151b3cea819f882ba51a3c700dd166ed6a64482da55f85b2f9e9b99.json  query-43ef9fdc401742b30f46bf81c5dc85ffd5ed866d7bde7088797d3493f97eaf2d.json  query-46cf90cd2c817eff22c48a2776c8284ebb4afed19713fcc1a65d366b45c32331.json  query-48286af3e36e0c87e3610338ad9361d5aa88cf7495506ada0ed65b1387c623e8.json  query-54d36bc805c2da2e5d43760878463762e3d900b05a2b6c1e5af9a76edcf14bbb.json  query-61a3a826e1d7809db42f9570b805da602a5878645be4297f498304fc0d10afa5.json  query-68d766b64a9b0289492e2cfb5264b9484b8fd3d7fcf43de3fc55899996b67cbc.json  query-6b9216f8be4e67f9ee19bfefb593e89512305431e1aec579bccfee46489c5f5c.json  query-6cc9a6f55398a962f1238cefce2088d5c3624fb50165315897d5866c2bb5b193.json  query-7a322d6949cfd1f238c73674db979804ec37098ad2628f81c58ec507366ccd57.json  query-96fe199d12ce935601648f5933b8cbda856322a1cf8579a08e3213184161b4c6.json  query-97de7f3c9c5d70f23aba180bbc30f815370acaf723e5488fc32b17003acc0609.json  query-afffaf01a2cb4b8ad4c42f1ebccfb51919e4907a301638090f6f99c83bb83ea0.json  query-c43c52502d4903ffcd0d9c7c892db4bd35c71f8779ed0055a89b13db58dcef78.json  query-c4aaccef243c27926791903ae22ae239e411af817c330ec09d91fc30a5521472.json  query-cf4c575c67deeaa4e0ad593d1bd59a87ba9a27c9ee1b6bc533f021b8a976ca56.json  query-cf84d02aa6030fc12d95ca35ced173d79e4a17c79f552dfda3610d55608076b8.json  (+4 more)
(+27 files in other folders)
