[package]
name = "Nascraft"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
sanitize-filename = "0.6"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls","offline"] }
dotenv = "0.15"
simplelog = "0.12"
