[package]
name = "Nascraft"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
sanitize-filename = "0.6"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.8", features = ["chrono","mysql", "time","runtime-tokio-native-tls","bigdecimal"] }
dotenv = "0.15"
simplelog = "0.12"
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
ssdp-client = "1.0"
rupnp = "2"
local-ip-address = "0.6"
mime_guess = "2.0"
actix-files = "0.6"
reqwest = { version = "0.12", features = ["stream", "json"] }
[dev-dependencies]
mockall = "0.13"